--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "browser-sync-webpack-plugin": "^2.3.0",
     "laravel-mix": "^6.0.49",
     "postcss": "^8.4.25",
+    "resolve-url-loader": "^5.0.0",
     "tailwindcss": "^3.3.2"
+  },
+  "dependencies": {
+    "alpinejs": "^3.12.3"
   }
 }
