--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "tailwindcss": "^3.3.2"
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.9",
     "alpinejs": "^3.12.3"
   }
 }
