--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.9",
-    "alpinejs": "^3.12.3"
+    "alpinejs": "^3.12.3",
+    "livewire": "^0.6.1"
   }
 }
